<resources>
    <string name="app_name">MovieInfoChecker</string>
    <string name="find">find</string>
    <string name="search">Search</string>
    <string name="popular">Popular</string>
    <string name="top_250">Top 250</string>
    <string name="test_title">Title of movie</string>
    <string name="test_crew">Ivan ivanov, Petr petrov</string>
    <string name="test_rating">6.7</string>
    <string name="test_number">12</string>
    <string name="test_growth">+336</string>
    <string name="test_year">2020</string>
    <string name="test_plot">Dom Cobb is a skilled thief, the absolute best in the dangerous art of extraction, stealing
        valuable secrets from deep within the subconscious during the dream state, when the mind is at its most
        vulnerable. Cobb\'s rare ability has made him a coveted player in this treacherous new world of corporate
        espionage, but it has also made him an international fugitive and cost him everything he has ever loved.
    </string>
    <string name="test_duration">2h 28mins</string>
    <string name="test_directors">Christopher Nolan</string>
    <string name="test_genres">Action, Adventure, Sci-Fi, Thriller</string>
    <string name="test_stars">Leonardo DiCaprio, Joseph Gordon-Levitt, Elliot Page, Ken Watanabe</string>
    <string name="test_actor_name">Leonardo DiCaprio</string>
    <string name="test_role">Cobb</string>
    <string name="trailer">Trailer</string>
    <string name="most_popular">Most popular</string>
    <string name="favorites">Favorites</string>
    <string name="fragment_placeholder">Этот фрагмент не реализован</string>
    <string name="test_date">14 nov 2021</string>
    <string name="us_uk">US, UK</string>
    <string name="similar">Similar</string>
    <string name="movie">Movie</string>
    <string name="series">Series</string>
    <string name="person">Person</string>
    <string name="all">All</string>
    <string name="hint">hint</string>
</resources>