<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:app="http://schemas.android.com/apk/res-auto"
           xmlns:tools="http://schemas.android.com/tools"
           android:id="@+id/nav_main"
           app:startDestination="@id/nav_my_list">

    <fragment android:id="@+id/nav_my_list"
              android:name="hi.dude.movieinfochecker.view.main.fragments.movielist.MovieListFragment"
              android:label="@string/most_popular"
              tools:layout="@layout/movie_list_fragment"/>

    <fragment android:id="@+id/nav_search"
              android:name="hi.dude.movieinfochecker.view.main.fragments.search.SearchFragment"
              android:label="@string/search"
              tools:layout="@layout/search_fragment"/>

    <fragment android:id="@+id/nav_favor"
              android:name="hi.dude.movieinfochecker.view.main.fragments.favorites.FavoritesFragment"
              android:label="@string/favorites"
              tools:layout="@layout/favorites_fragment"/>
</navigation>
