<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MovieListActivity"
        android:background="@color/colorPrimaryDark"
        android:animateLayoutChanges="true">

    <RelativeLayout
            android:id="@+id/searchContainer"
            android:layout_width="328dp"
            android:layout_height="48dp"
            android:background="@drawable/shape_search_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginVertical="18dp"
            android:layout_centerHorizontal="true"
            android:animateLayoutChanges="true">

        <ImageButton
                android:id="@+id/ibFind"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_search"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="13dp"
                android:background="@color/colorTransparent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="4dp"/>

        <EditText
                android:id="@+id/edSearch"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:hint="@string/search"
                android:textColorHint="@color/colorWhite"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorWhite"
                android:textFontWeight="600"
                android:textSize="16sp"
                android:lineHeight="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="48dp"
                android:fontFamily="@font/montserrat"/>

        <ImageButton
                android:id="@+id/ibBackSearch"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:scaleType="center"
                android:background="@color/colorTransparent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="4dp"/>
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tabsContainer"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimaryDark"
            android:layout_below="@id/searchContainer">

        <!--    android:animateLayoutChanges="true"-->

        <TextView
                android:id="@+id/popularMenuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="12dp"
                style="@style/MenuItemSelected"
                />

        <TextView
                android:id="@+id/topMenuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_250"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/popularMenuButton"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="12dp"
                style="@style/MenuItemNotSelected"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpMovies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tabsContainer"
            android:background="@color/colorPrimary"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvResults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tabsContainer"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:visibility="gone"
            android:background="@color/colorPrimary"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"/>


</RelativeLayout>